# Ghost

./: AGENTS.MD  Dockerfile  LICENSE.txt  Makefile  README.md  agents.md  cli.py  docker-compose.yml  ghost_core.py  ghost_log.txt  ghost_memory.json  pyproject.toml
app/: __init__.py  api.py  attention.py  engine.py  interrupts.py  memory_longterm.py  memory_working.py  schema.py  settings.py  soc.py
app/providers/: __init__.py  clock.py  embeddings_base.py  llm_base.py  ollama.py  ollama_embed.py  stubs.py
app/scraper/: __init__.py  plan.py  robots.py  runner.py
app/ui/: index.html
data/: ghost.sqlite3
ghost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: dev_setup_local_llm.sh
tests/: test_api_feedback.py  test_attention.py  test_interrupts.py  test_long_term_memory.py  test_provider_ollama.py  test_scraper.py  test_socCycle.py  test_working_memory.py
